force-app/main/default/objects/IntegracionGD__c/IntegracionGD__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Valores de los datos necesarios para la conexión con los WS de encamina</description>
    <label>IntegracionGD</label>
</CustomObject>