force-app/main/default/objects/IntegracionGD__c/fields/claveAddDelete__c.field-meta.xml
<CustomField>
    <fullName>claveAddDelete__c</fullName>
    <description>Clave utilizada para eliminar y crear tipos de documentos</description>
    <label>claveAddDelete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>