force-app/main/default/objects/IntegracionGD__c/fields/clientid__c.field-meta.xml
<CustomField>
    <fullName>clientid__c</fullName>
    <label>client id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>