force-app/main/default/objects/IntegracionGD__c/fields/clientsecret__c.field-meta.xml
<CustomField>
    <fullName>clientsecret__c</fullName>
    <label>client secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>