force-app/main/default/objects/IntegracionGD__c/fields/DebugMode__c.field-meta.xml
<CustomField>
    <fullName>DebugMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Con check, el componente estará en modo debug</description>
    <label>DebugMode</label>
    <type>Checkbox</type>
</CustomField>