force-app/main/default/objects/IntegracionGD__c/fields/EndpointDoc__c.field-meta.xml
<CustomField>
    <fullName>EndpointDoc__c</fullName>
    <description>Endpoint para los servicios de los documentos</description>
    <label>EndpointDoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>