force-app/main/default/objects/IntegracionGD__c/fields/EndpointDocType__c.field-meta.xml
<CustomField>
    <fullName>EndpointDocType__c</fullName>
    <description>Endpoint para los Servicios correspondientes a &quot;Document Type&quot;</description>
    <label>EndpointDocType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>