force-app/main/default/objects/IntegracionGD__c/fields/granttype__c.field-meta.xml
<CustomField>
    <fullName>granttype__c</fullName>
    <label>grant type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>