force-app/main/default/objects/IntegracionGD__c/fields/LimiteDocs__c.field-meta.xml
<CustomField>
    <fullName>LimiteDocs__c</fullName>
    <description>Limite de documentos mostrados por página en pantalla. Máximo 999</description>
    <label>Limite de documentos en pantalla</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>