force-app/main/default/objects/IntegracionGD__c/fields/NotificationEmailAvailable__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmailAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si el campo está activo se enviarán emails</description>
    <label>Notification Email Available</label>
    <type>Checkbox</type>
</CustomField>