force-app/main/default/objects/IntegracionGD__c/fields/resource__c.field-meta.xml
<CustomField>
    <fullName>resource__c</fullName>
    <label>resource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>