force-app/main/default/objects/IntegracionGD__c/fields/usuarioAddDelete__c.field-meta.xml
<CustomField>
    <fullName>usuarioAddDelete__c</fullName>
    <description>Usuario utilizado para eliminar y dar de alta tipos de documentos</description>
    <label>usuarioAddDelete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>